[c4] Tested blas vs blis.

--- a/c4/misc/converter2/Makefile
+++ b/c4/misc/converter2/Makefile
@@ -4,7 +4,7 @@ CFLAGS  += -std=c99 -Wall -Werror -pedantic -Wextra -Wfatal-errors -Wconversion
 # CFLAGS  += -fsanitize=address
 LDFLAGS += -lm -ffast-math
 
-CFLAGS += -DACCELERATE_NEW_LAPACK  -framework Accelerate
+# CFLAGS += -DACCELERATE_NEW_LAPACK  -framework Accelerate
 
 run:
 	mkdir -p .build && \
@@ -13,8 +13,9 @@ run:
 compile:
 	clang -o a.out ${CFLAGS} ${LDFLAGS} main.c && ./a.out
 
+bench: CFLAGS +=  -lblas -isystem ${HOME}/Workspace/build/blis/include/firestorm ${HOME}/Workspace/build/blis/lib/firestorm/libblis.a
 bench:
-	clang -o a.out -O3 -march=native ${CFLAGS} ${LDFLAGS} conv2d.c && ./a.out
+	clang -o a.out conv2d.c -O3 -march=native ${CFLAGS} ${LDFLAGS}  && ./a.out
 
 fmt:
 	~/Workspace/y/tools/clang_format_all.sh .
