[c4] Make the bench support macos again.

--- a/c4/misc/converter2/Makefile
+++ b/c4/misc/converter2/Makefile
@@ -4,7 +4,7 @@ CFLAGS  += -std=c99 -Wall -Werror -pedantic -Wextra -Wfatal-errors -Wconversion
 # CFLAGS  += -fsanitize=address
 LDFLAGS += -lm -ffast-math
 
-# CFLAGS += -DACCELERATE_NEW_LAPACK  -framework Accelerate
+# CFLAGS +=
 
 run:
 	mkdir -p .build && \
@@ -13,8 +13,12 @@ run:
 compile:
 	clang -o a.out ${CFLAGS} ${LDFLAGS} main.c && ./a.out
 
-bench: CFLAGS +=  -lblas -isystem ${HOME}/Workspace/build/blis/include/firestorm ${HOME}/Workspace/build/blis/lib/firestorm/libblis.a
-bench:
+bench_blis: CFLAGS +=  -lblas -isystem ${HOME}/Workspace/build/blis/include/firestorm ${HOME}/Workspace/build/blis/lib/firestorm/libblis.a
+bench_blis:
+	clang -o a.out conv2d.c -O3 -march=native ${CFLAGS} ${LDFLAGS}  && ./a.out
+
+bench_mac: CFLAGS +=  -DMAC=1 -DACCELERATE_NEW_LAPACK  -framework Accelerate
+bench_mac:
 	clang -o a.out conv2d.c -O3 -march=native ${CFLAGS} ${LDFLAGS}  && ./a.out
 
 fmt:
