[dlink] Started rewriting dlink as adt style.

--- a/dlink/Makefile
+++ b/dlink/Makefile
@@ -1,62 +1,41 @@
-CMD              =  cmd
-SRC              =  src
-INC              =  include
-
-EVE_FMT_FOLDERS  = ${CMD} ${SRC} ${INC}
-EVE_PATH         = ../../y/ann/eve
-include ${EVE_PATH}/eve.mk
-
-CXXFLAGS        += -Iinclude
-LDFLAGS         += ${EVE_LIB}
-
-BINS            += ${BUILD}/sudoku_main
-DEPS            += ${BUILD} ${BUILD_OBJ} ${EVE_LIB}
-
-# ------------------------------------------------------------------------------
-# Mods
+# === Configurations -----------------------------------------------------------
 #
-MODULES          = ${BUILD_OBJ}/algos_dal.o
+UNAME     = $(shell uname)
+BUILD     = .build
 
-TEST_MODS        = ${BUILD_OBJ}/algos_dal_test.o
-
-# ------------------------------------------------------------------------------
-# Actions
+# === CFLAGS and LDFLAGS -------------------------------------------------------
 #
+CFLAGS   += -std=c99 -Wall -Werror -pedantic -Wextra -Wfatal-errors -Wconversion
+LDFLAGS  += -lm
 
-.DEFAULT_GOAL   = compile
+ifdef RELEASE
+CFLAGS   += -DNDEBUG -O3 -march=native
+LDFLAGS  += -ffast-math
+else
+CFLAGS   += -g
+endif
 
-# incrementally compile all libraries.
-compile: ${BINS} ${MODULES} ${DEPS}
-
-run: compile
-	${BUILD}/sudoku_main
-
-release:
-	@echo compile with RELEASE mode
-	${MK} RELEASE=1 compile run || exit 1
+ifdef ASAN
+CFLAGS   += -fsanitize=address
+endif
 
 
-test: compile
-	${BUILD}/test_main
-
-# ------------------------------------------------------------------------------
-# Rules for sub-modules
+# === Rules --------------------------------------------------------------------
 #
-${BUILD_OBJ}/algos_%.o: ${SRC}/algos/%.cc ${INC}/algos/*.h | ${DEPS}
-	${CXX} -o $@ ${CXXFLAGS} -c $<
+compile: | ${BUILD}
+	clang -o ${BUILD}/a.out ${CFLAGS} ${LDFLAGS} main.c && ./${BUILD}/a.out
 
-# ------------------------------------------------------------------------------
-# Cmds
-#
-compile: ${BUILD}/sudoku_main ${BUILD}/test_main
+release: test
 
-${BUILD}/sudoku_main: ${BUILD}/sudoku_main.o ${MODULES} | ${DEPS}
-	${CXX} -o $@ $^ ${LDFLAGS}
+test: CFLAGS += -DADT_TEST_H_=1
+test: | ${BUILD}
+	clang -o ${BUILD}/test ${CFLAGS} ${LDFLAGS} dlink.c && ./${BUILD}/test
 
-${BUILD}/test_main: ${BUILD}/test_main.o ${MODULES} ${TEST_MODS} | ${DEPS}
-	${CXX} -o $@ $^ ${LDFLAGS} ${EVE_TEST_LIB}
+${BUILD}:
+	mkdir -p ${BUILD}
 
-${BUILD}/%_main.o: cmd/%/main.cc | ${DEPS}
-	${CXX} ${CXXFLAGS} -o $@ -c $^
+fmt:
+	~/Workspace/y/tools/clang_format_all.sh .
 
-
+clean:
+	rm -rf ${BUILD}
