--- a/incub/mlm/Makefile
+++ b/incub/mlm/Makefile
@@ -41,14 +41,20 @@ CFLAGS   += -DTOK_FILE="\"${TOK_FILE}\""
 # === Rules --------------------------------------------------------------------
 #
 main:  | ${BUILD}
-	clang -o ${BUILD}/a.out ${CFLAGS} io.c main.c ${LDFLAGS} && ./${BUILD}/a.out
+	clang -o ${BUILD}/a.out ${CFLAGS} base64.c io.c main.c ${LDFLAGS} && ./${BUILD}/a.out
 
 io: CFLAGS += -DMLM_TEST_H_
 io:  | ${BUILD}
 	clang -o ${BUILD}/a.out ${CFLAGS} io.c ${LDFLAGS} && ./${BUILD}/a.out
 
+base64: CFLAGS += -DMLM_TEST_H_
+base64:  | ${BUILD}
+	clang -o ${BUILD}/a.out ${CFLAGS} base64.c ${LDFLAGS} && ./${BUILD}/a.out
+
 ${BUILD}:
 	mkdir -p ${BUILD}
+
+test: base64 io
 
 fmt:
 	~/Workspace/y/tools/clang_format_all.sh .
