--- a/incub/mlm/Makefile
+++ b/incub/mlm/Makefile
@@ -41,7 +41,7 @@ CFLAGS   += -DTOK_FILE="\"${TOK_FILE}\""
 # === Rules --------------------------------------------------------------------
 #
 main:  | ${BUILD}
-	clang -o ${BUILD}/a.out ${CFLAGS} base64.c io.c main.c ${LDFLAGS} && ./${BUILD}/a.out
+	clang -o ${BUILD}/a.out ${CFLAGS} base64.c io.c tok.c main.c ${LDFLAGS} && ./${BUILD}/a.out
 
 io: CFLAGS += -DMLM_TEST_H_
 io:  | ${BUILD}
