[aic] fixed makefile.

--- a/incub/aic/Makefile
+++ b/incub/aic/Makefile
@@ -60,7 +60,7 @@ ${BUILD}:
 	mkdir -p ${BUILD}
 
 test: CFLAGS += -DAIC_TEST_H_
-test:
+test:  | ${BUILD}
 	@set -e
 	@clang -o ${BUILD}/a.out ${CFLAGS} ctx.c io.c ${LDFLAGS} && echo -n "io     -- " && ./${BUILD}/a.out
 	@clang -o ${BUILD}/a.out ${CFLAGS} base64.c ${LDFLAGS}   && echo -n "base64 -- " && ./${BUILD}/a.out
