--- a/incub/aic/Makefile
+++ b/incub/aic/Makefile
@@ -54,7 +54,7 @@ CFLAGS   += -DTOK_FILE="\"${TOK_FILE}\""
 # === Rules --------------------------------------------------------------------
 #
 main:  | ${BUILD}
-	clang -o ${BUILD}/a.out ${CFLAGS} ctx.c base64.c io.c tok.c util.c tensor.c llama.c main.c ${LDFLAGS} && ./${BUILD}/a.out
+	clang -o ${BUILD}/a.out ${CFLAGS} ctx.c base64.c io.c tok.c util.c tensor.c llama.c vm.c main.c ${LDFLAGS} && ./${BUILD}/a.out
 
 ${BUILD}:
 	mkdir -p ${BUILD}
