[aic] added comments for llama model.

--- a/incub/aic/Makefile
+++ b/incub/aic/Makefile
@@ -50,6 +50,7 @@ endif
 # === Knobs --------------------------------------------------------------------
 #
 CFLAGS   += -DTOK_FILE="\"${TOK_FILE}\""
+CFLAGS   += -DLLAMA_FILE="\"/tmp/tensor_data.bin\""
 
 # === Rules --------------------------------------------------------------------
 #
