--- a/incub/aic/Makefile
+++ b/incub/aic/Makefile
@@ -55,7 +55,7 @@ CFLAGS   += -DLLAMA_FILE="\"/tmp/tensor_data.bin\""
 # === Rules --------------------------------------------------------------------
 #
 main:  | ${BUILD}
-	clang -o ${BUILD}/a.out ${CFLAGS} ctx.c  io.c tok.c util.c tensor.c llama.c vm.c op.c main.c ${LDFLAGS} && ./${BUILD}/a.out
+	clang -o ${BUILD}/a.out ${CFLAGS} ctx.c tok.c util.c tensor.c llama.c vm.c op.c main.c ${LDFLAGS} && ./${BUILD}/a.out
 
 ${BUILD}:
 	mkdir -p ${BUILD}
@@ -63,8 +63,7 @@ ${BUILD}:
 test: CFLAGS += -DAIC_TEST_H_
 test:  | ${BUILD}
 	@set -e
-	@clang -o ${BUILD}/a.out ${CFLAGS} ctx.c io.c ${LDFLAGS} && echo -n "io     -- " && ./${BUILD}/a.out
-	@clang -o ${BUILD}/a.out ${CFLAGS} util.c ${LDFLAGS}     && echo -n "util   -- " && ./${BUILD}/a.out
+	@clang -o ${BUILD}/a.out ${CFLAGS} ctx.c util.c ${LDFLAGS}     && echo -n "util   -- " && ./${BUILD}/a.out
 	@echo "All done."
 
 fmt:
