[sat] refactor Makefile.

--- a/sat/Makefile
+++ b/sat/Makefile
@@ -1,21 +1,21 @@
 # === Configurations -----------------------------------------------------------
 #
 UNAME     = $(shell uname)
-BUILD     = .build
-BUILD_OBJ = ${BUILD}/objs
 SHELL     = bash
 SRC       = src
+BUILD     = .build
+BUILD_OBJ = ${BUILD}/objs
 
 ZION_PATH = ../../y/ann/zion/cc
 
 # === CXXFLAGS and LDFLAGS -----------------------------------------------------
 #
-CXXFLAGS        += -std=c++23 -Wall -Werror -pedantic -Wextra -Wfatal-errors -Wconversion
-LDFLAGS         += -lm
+CXXFLAGS += -std=c++23 -Wall -Werror -pedantic -Wextra -Wfatal-errors -Wconversion
+LDFLAGS  += -lm
 
-CXXFLAGS        += -I${ZION_PATH}/include
+CXXFLAGS += -I${ZION_PATH}/include
 
-DEPS            += ${BUILD} ${BUILD_OBJ}
+DEPS     += ${BUILD} ${BUILD_OBJ}
 
 # Release
 ifdef RELEASE
@@ -34,15 +34,16 @@ endif
 
 # === Mods ---------------------------------------------------------------------
 #
-MODS            += ${BUILD_OBJ}/sat_solver.o
-MODS            += ${BUILD_OBJ}/sat_watch.o
+MODS     += ${BUILD_OBJ}/sat_solver.o
+MODS     += ${BUILD_OBJ}/sat_watch.o
 
 # === Rules --------------------------------------------------------------------
 #
 
-.DEFAULT_GOAL   = run
+.DEFAULT_GOAL = run
 
 compile: ${MODS} | ${DEPS}
+compile: ${BUILD}/sat_watch_main
 
 run: compile
 	${BUILD}/sat_watch_main
@@ -52,25 +53,16 @@ release: clean
 
 test: compile
 
-# ------------------------------------------------------------------------------
-# Rules for sub-modules
+# === Objs and Main ------------------------------------------------------------
 #
-# ------------------------------------------------------------------------------
-# Cmds
-#
-compile: ${BUILD}/sat_watch_main
-
 ${BUILD}/sat_watch_main: ${BUILD}/sat_watch_main.o ${MODS} | ${DEPS}
 	${CXX} -o $@ $^ ${LDFLAGS}
 
 ${BUILD_OBJ}/%.o: ${SRC}/%.cc ${SRC}/*.h | ${DEPS}
-	${CXX} -o $@ ${CXXFLAGS} -c $<
+	${CXX} ${CXXFLAGS} -o $@ -c $<
 
 ${BUILD}/%_main.o: src/%_main.cc | ${DEPS}
-	${CXX} -o $@ ${CXXFLAGS} -c $^
-
-clean:
-	rm -rf ${BUILD}
+	${CXX} ${CXXFLAGS} -o $@ -c $^
 
 ${BUILD}:
 	@mkdir -p ${BUILD}
@@ -81,3 +73,5 @@ ${BUILD_OBJ}:
 fmt:
 	@~/Workspace/y/tools/clang_format_all.sh .
 
+clean:
+	rm -rf ${BUILD}
