[gpt] added mmap.

--- a/gpt/Makefile
+++ b/gpt/Makefile
@@ -34,8 +34,7 @@ endif
 
 # === Mods ---------------------------------------------------------------------
 #
-# MODS     += ${BUILD_OBJ}/xxx.o
-# MODS     += ${BUILD_OBJ}/xxx.o
+MODS     += ${BUILD_OBJ}/gguf.o
 
 # === Rules --------------------------------------------------------------------
 #
