[taocp] added dlink.

--- a/taocp/Makefile
+++ b/taocp/Makefile
@@ -1,8 +1,11 @@
 compile:
-	make -C v4_horn compile
+	make -C v4_horn  compile
+	make -C v4_dlink compile
 
 test:
-	make -C v4_horn test
+	make -C v4_horn  test
+	make -C v4_dlink test
 
 fmt:
-	make -C v4_horn fmt
+	make -C v4_horn  fmt
+	make -C v4_dlink fmt
