[github] added taocp.

--- a/.github/workflows/taocp.yml
+++ b/.github/workflows/taocp.yml
@@ -1,4 +1,4 @@
-name: dlink
+name: taocp
 run-name: ${{ github.actor }} is running tests for ${{ github.workflow }}
 on: [push]
 jobs:
@@ -15,8 +15,6 @@ jobs:
 
       - name: Run ${{ github.workflow }} Test
         run: make -C ${{ github.workspace }}/z/${{ github.workflow }} clean test
-      - name: Run ${{ github.workflow }} ASAN Test
-        run: make -C ${{ github.workspace }}/z/${{ github.workflow }} ASAN=1 clean test
       - name: Run ${{ github.workflow }} Release
         run: make -C ${{ github.workspace }}/z/${{ github.workflow }} clean release
 
