--- a/taocp/Makefile
+++ b/taocp/Makefile
@@ -9,3 +9,11 @@ test:
 fmt:
 	make -C v4_horn  fmt
 	make -C v4_dlink fmt
+
+clean:
+	make -C v4_horn  clean
+	make -C v4_dlink clean
+
+release:
+	make -C v4_horn  release
+	make -C v4_dlink release
