--- a/.github/workflows/taocp.yml
+++ b/.github/workflows/taocp.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: ./z/.github/actions/base
         with:
           checkout_y: true
+          require_clang: true
 
       - name: Run ${{ github.workflow }} Test
         run: make -C ${{ github.workspace }}/z/${{ github.workflow }} clean test
