--- a/.github/workflows/taocp.yml
+++ b/.github/workflows/taocp.yml
@@ -12,10 +12,12 @@ jobs:
       - uses: ./z/.github/actions/base
         with:
           checkout_y: true
+          require_gcc: true
           require_clang: true
+          clang_version: 19
 
       - name: Run ${{ github.workflow }} Test
-        run: make -C ${{ github.workspace }}/z/${{ github.workflow }} clean test
+        run: CC=clamake -C ${{ github.workspace }}/z/${{ github.workflow }} clean test
       - name: Run ${{ github.workflow }} ASAN Test
         run: make -C ${{ github.workspace }}/z/${{ github.workflow }} ASAN=1 clean test
       - name: Run ${{ github.workflow }} Release
