[github] added clang rt.

--- a/.github/actions/base/action.yml
+++ b/.github/actions/base/action.yml
@@ -61,7 +61,12 @@ runs:
     - name: Install LLVM and Clang
       if: ${{ inputs.require_clang == 'true' }}
       shell: bash
-      run: sudo apt-get install -y --no-install-recommends clang-${{ inputs.clang_version }} lld-${{ inputs.clang_version }}
+      run: |
+            sudo apt-get install -y --no-install-recommends \
+                clang-${{ inputs.clang_version }}           \
+                lld-${{ inputs.clang_version }}             \
+                libclang-${{ inputs.clang_version }}-dev    \
+                libclang-rt-${{ inputs.clang_version}}-dev
     - name: Display Clang version
       if: ${{ inputs.require_clang == 'true' }}
       shell: bash
