--- a/taocp/v4_sat/Makefile
+++ b/taocp/v4_sat/Makefile
@@ -69,6 +69,8 @@ ${BUILD_OBJ}/%.o: ${SRC}/%.cc ${SRC}/*.h | ${DEPS}
 ${BUILD}/%_main.o: src/%_main.cc | ${DEPS}
 	${CXX} ${CXXFLAGS} -o $@ -c $^
 
+# === House Keeping ------------------------------------------------------------
+#
 ${BUILD}:
 	@mkdir -p ${BUILD}
 
